# streamlit-pandera

./: .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: e2e.yml  publish_pypi.yml
app/: Home.py
e2e/: test_template.py
streamlit_pandera/: Home.py  validate_file.py
streamlit_pandera/io_file_validator/: __init__.py  validate_file.py  validator.py
streamlit_pandera/pages/: 0_Instructions.py
tests/: test_validator.py
tests/data/: sample_prices.csv  sample_prices_raise_error.csv
