[tool.poetry]
name = "streamlit_pandera"
version = "0.0.1"
description = "Streamlit Data Validator Tool helps you validate your data with dataframe-type objects"
authors = ["Manrique Vargas <machomaxg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
validators = "^0.28.1"
pipx = "^1.5.0"
cookiecutter = "^2.6.0"
wheel = "*"
playwright = "1.39.0"
requests = "2.31.0"
pytest-playwright-snapshot = "1.0"
pytest-rerunfailures = "12.0"
pandera = { version = "^0.7.2", extras = ["io"] }

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pylint = "^3.2.0"
twine = "*"
lxml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"